syntax = "proto3";
package namenode;
option go_package = "NameNode/namenode";



/*
    DireccionServer retorna informacion del
    nuevo 
*/
message EmptyMessage {}


message Propuesta {
    int32 NumChunk = 1;
    string Maquina = 2;
    string NombreLibro = 3;
}

message libroEnSistema {
    string NombreLibro = 1;
    repeated Propuesta chunks = 2;
}

service NameNodeService {
    rpc mandarPropuesta(stream Propuesta) returns (stream Propuesta) {}
    rpc getListaLibros(stream EmptyMessage) returns (stream libroEnSistema) {}
}